# xelis-tip-bot

./: Cargo.toml  README.md
src/: main.rs  service.rs  telegram_message.rs
